--- a/src/main/resources/com/cab302/bugco/home-view.fxml
+++ b/src/main/resources/com/cab302/bugco/home-view.fxml
@@ -8,11 +8,9 @@
 <StackPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
            fx:controller="com.cab302.bugco.HomeController"
            prefWidth="1200" prefHeight="820"
-           styleClass="root-terminal"
-           fx:id="rootStack">
+           styleClass="root-terminal">
 
-    <BorderPane fx:id="rootBorder"
-                prefWidth="1200" prefHeight="820">
+    <BorderPane prefWidth="1200" prefHeight="820">
         <top>
             <VBox spacing="10" BorderPane.alignment="CENTER">
                 <HBox alignment="CENTER" styleClass="banner panel">
@@ -33,17 +31,19 @@
 
                 <VBox GridPane.columnIndex="0" spacing="8" styleClass="panel">
                     <HBox spacing="8" alignment="CENTER_LEFT" styleClass="panel-titlebar">
-                        <!-- keep these circles; do NOT bind them in controller to avoid duplicate fx:id issues -->
                         <Circle styleClass="dot-red" radius="6"/>
                         <Circle styleClass="dot-amber" radius="6"/>
                         <Circle styleClass="dot-green" radius="6"/>
                         <Label text="BUGCO INDUSTRIES ™" styleClass="panel-title"/>
                     </HBox>
-                    <StackPane fx:id="imageHost" styleClass="panel-body">
+
+                    <!-- Host that the image will size to -->
+                    <StackPane fx:id="imageHost" styleClass="panel-body" VBox.vgrow="ALWAYS">
                         <ImageView fx:id="imageView"
+                                   fitWidth="220"
                                    preserveRatio="true"
-                                   smooth="true"
-                                   StackPane.alignment="CENTER"/>
+                                   layoutX="20"
+                                   layoutY="20"/>
                     </StackPane>
                 </VBox>
 
@@ -72,9 +72,12 @@
                     <VBox spacing="12" styleClass="panel-body">
                         <TextArea fx:id="terminalArea" editable="false" wrapText="true"
                                   styleClass="terminal-area" prefRowCount="12"/>
+
+                        <!-- input for terminal-driven flow -->
                         <TextField fx:id="terminalInput" visible="false" managed="false"
                                    promptText="type here and press Enter"
                                    styleClass="terminal-input"/>
+
                         <HBox alignment="CENTER" spacing="14">
                             <Button text="LOGIN"     onAction="#onLogin"    styleClass="amber-btn"/>
                             <Button text="REGISTER"  onAction="#onRegister" styleClass="amber-btn"/>
