--- a/src/main/resources/leadershipboard/leadershipboard/hello-view.fxml
+++ b/src/main/resources/leadershipboard/leadershipboard/hello-view.fxml
@@ -15,26 +15,27 @@
       style="-fx-background-color: black; -fx-border-color: #18f018; -fx-border-width: 5;"
       spacing="10" alignment="TOP_CENTER">
 
-    <!--  Creating a customer title Bar -->
+
     <HBox fx:id="customTitleBar" styleClass="custom-title-bar">
         <Label text="TERMINAL ACCESS SYSTEM
         [Version 0.0.3] - Security Protocol Activated" styleClass="title-text"/>
     </HBox>
 
-    <!--  Creating the main content section -->
+
     <HBox alignment="CENTER" spacing="20.0"
           style="-fx-background-color: black; -fx-border-color: #18f018; -fx-border-width: 5;">
         <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
         </padding>
 
-        <!-- Creating ImageView for Logo -->
-        <StackPane prefWidth="150" prefHeight="150" style="-fx-border-color: #18f018;">
-            <ImageView fx:id="logoImage" fitWidth="150" fitHeight="150" preserveRatio="true"
-                       visible="true" opacity="1.0"/>
+
+
+        <StackPane prefWidth="50" prefHeight="50" style="-fx-border-color: #18f018; -fx-border-width: 2;">
+            <ImageView fx:id="logoImage" fitWidth="200" fitHeight="200" preserveRatio="true" />
         </StackPane>
 
-        <!-- Creating Leaderboard Table -->
+
+
         <TableView fx:id="leaderboardTable" prefWidth="600" prefHeight="400"
                    style="-fx-background-color: black; -fx-border-color: #18f018; -fx-border-width: 3;"
                    HBox.hgrow="ALWAYS">
@@ -45,7 +46,8 @@
         </TableView>
     </HBox>
 
-    <!-- Creating the  Footer Text -->
+
+
     <VBox alignment="CENTER" spacing="4" styleClass="footer-box">
         <Label text="Bugco Achievements" styleClass="footer-header"/>
         <Label text="Lock Picker" styleClass="footer-line"/>
