--- a/src/main/resources/com/cab302/bugco/login-view.fxml
+++ b/src/main/resources/com/cab302/bugco/login-view.fxml
@@ -72,7 +72,7 @@
                                 HBox.hgrow="ALWAYS"
                                 maxWidth="Infinity"/>
                         <Button text="REGISTER"
-                                onAction="#showRegister"
+                                onAction="#handleRegister"
                                 styleClass="amber-btn"
                                 HBox.hgrow="ALWAYS"
                                 maxWidth="Infinity"/>
