Added Logout Functionality

--- a/src/main/resources/com/cab302/bugco/home-view.fxml
+++ b/src/main/resources/com/cab302/bugco/home-view.fxml
@@ -79,6 +79,7 @@
 
                         <HBox alignment="CENTER" spacing="14">
                             <Button text="GAME INFO" onAction="#onGameInfo" styleClass="amber-btn"/>
+                            <Button text="LOGOUT" onAction="#onLogout" styleClass="amber-btn"/>
                         </HBox>
 
                         <Button text="INITIALISE HACKING PROTOCOLS" maxWidth="Infinity"
