--- a/src/main/resources/com/cab302/bugco/home-view.fxml
+++ b/src/main/resources/com/cab302/bugco/home-view.fxml
@@ -98,6 +98,8 @@
                         <HBox alignment="CENTER" spacing="14">
                             <Button text="GAME INFO" onAction="#onGameInfo" styleClass="amber-btn"
                                     maxWidth="Infinity" HBox.hgrow="ALWAYS"/>
+                            <Button text="ACCOUNT INFO" onAction="#AccountInfo" styleClass="amber-btn"
+                                    maxWidth="Infinity" HBox.hgrow="ALWAYS"/>
                             <Button text="LOGOUT" onAction="#onLogout" styleClass="amber-btn"
                                     maxWidth="Infinity" HBox.hgrow="ALWAYS"/>
                         </HBox>
